# receipt_bot

./: .env  .gitignore  bot_mcp_server.py  package-lock.json  pyproject.toml  receipt_bot.py  requirements.txt  test.py
