[project]
name = "receipt-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anthropic>=0.68.0",
    "anyio==4.10.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "audioop-lts==0.2.2",
    "cachecontrol==0.14.3",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "comm==0.2.3",
    "cryptography==45.0.7",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "discord-py==2.5.2",
    "executing==2.2.1",
    "firebase-admin==7.1.0",
    "frozenlist==1.7.0",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-cloud-core==2.4.3",
    "google-cloud-firestore==2.21.0",
    "google-cloud-storage==3.3.1",
    "google-crc32c==1.7.1",
    "google-genai==1.38.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.74.0",
    "grpcio-status==1.74.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "matplotlib-inline==0.1.7",
    "mcp[cli]>=1.14.1",
    "msgpack==1.1.1",
    "multidict==6.6.4",
    "nest-asyncio==1.6.0",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.2",
    "parso==0.8.5",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==6.32.1",
    "psutil==7.1.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pylint>=3.3.8",
    "pytesseract==0.3.13",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pywin32==311",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "tenacity==9.1.2",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uv==0.8.19",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "yarl==1.20.1",
]
